fixed arrow alignment

--- a/src/_includes/components/css/product.css
+++ b/src/_includes/components/css/product.css
@@ -457,14 +457,6 @@ body.lightbox-open #image-lightbox {
   font-size: 2rem;
 }
 
-#arrow-up {
-  align-self: start;
-}
-
-#arrow-down {
-  align-self: end;
-}
-
 #wholesale-price {
   display: none;
 }
